// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly with accent palette 1`] = `
.c0 {
  background: #00dba3;
  color: #fff;
  border-radius: 3px;
  border: 1px solid #5f6b7d;
  padding: 5px 10px;
  text-transform: capitalize;
  -webkit-transition: background 0.3s linear;
  transition: background 0.3s linear;
}

.c0:hover {
  cursor: pointer;
  background: rgba(95,107,125,0.3);
}

<button
  class="c0"
/>
`;

exports[`Button renders correctly with base palette 1`] = `
.c0 {
  background: #fff;
  color: #1b1b1b;
  border-radius: 3px;
  border: 1px solid #37414f;
  padding: 5px 10px;
  text-transform: capitalize;
  -webkit-transition: background 0.3s linear;
  transition: background 0.3s linear;
}

.c0:hover {
  cursor: pointer;
  background: rgba(55,65,79,0.3);
}

<button
  class="c0"
/>
`;
